[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flick"
version = "0.1.2"
description = "Focus macOS apps with keyboard shortcuts."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "rumps",
    "pynput",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "importlib_metadata>=1.0; python_version < '3.8'",
]
keywords = ["macos", "window", "focus", "accessibility", "mouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

[project.scripts]
flick = "flick:main"

[project.urls]
Repository = "https://github.com/gruns/flick"

[tool.setuptools]
py-modules = ["flick"]
